--- a/neuro/rbac/V1.0.5/Neuro.yaml
+++ b/neuro/rbac/V1.0.5/Neuro.yaml
@@ -2,12 +2,12 @@ name: rbac
 version: 0.0.1
 appVersion: 1.0.5
 description: Neuro app
-home: 
+home: https://accelerite.com/products/neuro/
 icon: https://pbs.twimg.com/profile_images/1000998267369373696/46g6d8j4_400x400.jpg
 keywords:
 - neuro
 sources:
-- 
+- https://github.com/shahdadpuri/neuro-rancher-catalog-2.0
 maintainers:
   - name: Accelerite
     email: accelerite_incubator@persistent.com
